sandbox/output
StringToIntParser.java:5: error: cannot find symbol
        return Arrays.asList(string.split("\\s*,\\s*"));
               ^
  symbol:   variable Arrays
  location: class StringToIntParser
1 error
